// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/descriptions/demo/basic.md correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                UserName
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                Zhou Maomao
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Telephone
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                1810000000
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Live
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                Hangzhou, Zhejiang
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Remark
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                empty
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Address
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/border.md correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Product
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Cloud Database
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Billing Mode
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Prepaid
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Automatic Renewal
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            YES
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Order time
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            2018-04-24 18:00:00
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Usage Time
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="3"
          >
            2019-04-24 18:00:00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Status
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            <span
              class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
            >
              <span
                class="ant-badge-status-dot ant-badge-status-processing"
              />
              <span
                class="ant-badge-status-text"
              >
                Running
              </span>
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Negotiated Amount
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $80.00
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Discount
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $20.00
          </td>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Official Receipts
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $60.00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Config Info
          </th>
          <td
            class="ant-descriptions-item-content"
            colspan="5"
          >
            Data disk type: MongoDB
            <br />
            Database version: 3.4
            <br />
            Package: dds.mongo.mid
            <br />
            Storage space: 10 GB
            <br />
            Replication factor: 3
            <br />
            Region: East China 1
            <br />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/responsive.md correctly 1`] = `
<div>
  <div
    class="ant-descriptions ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        Responsive Descriptions
      </div>
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Product
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Cloud Database
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Billing
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Prepaid
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              time
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              18:00:00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Amount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $80.00
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Discount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $20.00
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Official
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $60.00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Config Info
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              Data disk type: MongoDB
              <br />
              Database version: 3.4
              <br />
              Package: dds.mongo.mid
              <br />
              Storage space: 10 GB
              <br />
              Replication factor: 3
              <br />
              Region: East China 1
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        default
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        middle
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        small
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-descriptions ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        Custom Size
      </div>
      <div
        class="ant-descriptions-extra"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Edit
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Product
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Cloud Database
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Billing
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              Prepaid
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              time
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              18:00:00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Amount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $80.00
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Discount
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $20.00
            </td>
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Official
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="1"
            >
              $60.00
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label"
              colspan="1"
            >
              Config Info
            </th>
            <td
              class="ant-descriptions-item-content"
              colspan="5"
            >
              Data disk type: MongoDB
              <br />
              Database version: 3.4
              <br />
              Package: dds.mongo.mid
              <br />
              Storage space: 10 GB
              <br />
              Replication factor: 3
              <br />
              Region: East China 1
              <br />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <br />
  <br />
  <div
    class="ant-descriptions"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        Custom Size
      </div>
      <div
        class="ant-descriptions-extra"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Edit
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Product
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  Cloud Database
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Billing
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  Prepaid
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  time
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  18:00:00
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Amount
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  $80.00
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Discount
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  $20.00
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  Official
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  $60.00
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/text.md correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Product
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                Cloud Database
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Billing Mode
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                Prepaid
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Automatic Renewal
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                YES
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Order time
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                2018-04-24 18:00:00
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Usage Time
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                2019-04-24 18:00:00
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Status
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-processing"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    Running
                  </span>
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Negotiated Amount
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                $80.00
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Discount
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                $20.00
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Official Receipts
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                $60.00
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Config Info
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                Data disk type: MongoDB
                <br />
                Database version: 3.4
                <br />
                Package: dds.mongo.mid
                <br />
                Storage space: 10 GB
                <br />
                Replication factor: 3
                <br />
                Region: East China 1
                <br />
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Official Receipts
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                $60.00
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Config Info
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <div
                  class="ant-table-wrapper"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div
                      class="ant-spin-container"
                    >
                      <div
                        class="ant-table ant-table-small"
                      >
                        <div
                          class="ant-table-container"
                        >
                          <div
                            class="ant-table-content"
                          >
                            <table
                              style="table-layout:auto"
                            >
                              <colgroup />
                              <thead
                                class="ant-table-thead"
                              >
                                <tr>
                                  <th
                                    class="ant-table-cell"
                                  >
                                    姓名
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                  >
                                    年龄
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                  >
                                    住址
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                class="ant-table-tbody"
                              >
                                <tr
                                  class="ant-table-row ant-table-row-level-0"
                                  data-row-key="1"
                                >
                                  <td
                                    class="ant-table-cell"
                                  >
                                    胡彦斌
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    32
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    西湖区湖底公园1号
                                  </td>
                                </tr>
                                <tr
                                  class="ant-table-row ant-table-row-level-0"
                                  data-row-key="2"
                                >
                                  <td
                                    class="ant-table-cell"
                                  >
                                    胡彦祖
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    42
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    西湖区湖底公园1号
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/vertical.md correctly 1`] = `
<div
  class="ant-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                UserName
              </span>
            </div>
          </th>
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Telephone
              </span>
            </div>
          </th>
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Live
              </span>
            </div>
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-content"
              >
                Zhou Maomao
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-content"
              >
                1810000000
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-content"
              >
                Hangzhou, Zhejiang
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Address
              </span>
            </div>
          </th>
          <th
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                Remark
              </span>
            </div>
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="2"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-content"
              >
                No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-content"
              >
                empty
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders ./components/descriptions/demo/vertical-border.md correctly 1`] = `
<div
  class="ant-descriptions ant-descriptions-bordered"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      User Info
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Product
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Billing Mode
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Automatic Renewal
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Cloud Database
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            Prepaid
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            YES
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Order time
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="2"
          >
            Usage Time
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            2018-04-24 18:00:00
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="2"
          >
            2019-04-24 18:00:00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="3"
          >
            Status
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="3"
          >
            <span
              class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
            >
              <span
                class="ant-badge-status-dot ant-badge-status-processing"
              />
              <span
                class="ant-badge-status-text"
              >
                Running
              </span>
            </span>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Negotiated Amount
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Discount
          </th>
          <th
            class="ant-descriptions-item-label"
            colspan="1"
          >
            Official Receipts
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $80.00
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $20.00
          </td>
          <td
            class="ant-descriptions-item-content"
            colspan="1"
          >
            $60.00
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <th
            class="ant-descriptions-item-label"
            colspan="3"
          >
            Config Info
          </th>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item-content"
            colspan="3"
          >
            Data disk type: MongoDB
            <br />
            Database version: 3.4
            <br />
            Package: dds.mongo.mid
            <br />
            Storage space: 10 GB
            <br />
            Replication factor: 3
            <br />
            Region: East China 1
            <br />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
